--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
     "docs:build": "npx vuepress build docs",
-    "publish": "publish.sh"
+    "publish": "sh publish.sh"
   },
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "vuepress": "^1.7.1",
     "vuepress-theme-cool": "^1.3.1"
+  }
 }
